fix overflow

--- a/src/assets/styles/appStyles.scss
+++ b/src/assets/styles/appStyles.scss
@@ -10,6 +10,10 @@ body {
 
 .App {
   position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  
     .sections-container {
         position: absolute;
         display: flex;
